[gd_scene load_steps=9 format=3 uid="uid://d3r72jwxppe2h"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_f7cjv"]
[ext_resource type="Texture2D" uid="uid://ca11qamk5c7dx" path="res://Rocky Roads/Enemies/slime_green.png" id="2_mpd22"]

[sub_resource type="Animation" id="Animation_kduau"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k3f0q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3lch4"]
resource_name = "Walk"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pla7p"]
_data = {
"Idle": SubResource("Animation_kduau"),
"RESET": SubResource("Animation_k3f0q"),
"Walk": SubResource("Animation_3lch4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6dbj"]
size = Vector2(16, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdkmu"]
size = Vector2(18, 13)

[node name="Enemy" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_f7cjv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 1.5)
scale = Vector2(1.25, 1.1875)
texture = ExtResource("2_mpd22")
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pla7p")
}
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 5)
shape = SubResource("RectangleShape2D_n6dbj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 4.5)
shape = SubResource("RectangleShape2D_bdkmu")

[node name="RayCastWall2D" type="RayCast2D" parent="."]
position = Vector2(-11, 6)
scale = Vector2(0.2, 0.2)
target_position = Vector2(-30, 0)
collision_mask = 5

[node name="RayCastFloor2D" type="RayCast2D" parent="."]
position = Vector2(-11, 1)
scale = Vector2(0.2, 0.2)
target_position = Vector2(0, 60)
collision_mask = 5

[node name="RayCastBack2D" type="RayCast2D" parent="."]
position = Vector2(13, 6)
scale = Vector2(0.2, 0.2)
target_position = Vector2(130, 0)
collision_mask = 5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
